...
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.Vinylos.PopupOverlay">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collectors"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

...
        android:layout_gravity="bottom"
        android:layout_height="match_parent"
        tools:listitem="@layout/album_item"
        android:paddingTop="50dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/blue"

        app:menu="@menu/bottom_navigation_menu"
        android:layout_gravity="bottom"/>
...
