...
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/albums"/>
    <item
        android:id="@+id/artists"
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/artist"/>

...
